# youtube-analytics

./: .gitignore  pyproject.toml
helper/: youtube_api_manual.py
homework-1/: main.py
homework-2/output/: moscowpython.json
homework-3/: main.py
homework-5/: main.py
src/: channel.py  playlist.py  video.py
tests/: test_channel.py
